# vestrs

./: .dockerignore  .editorconfig  .env.local.example  .env.production.example  .env.staging.example  .gitignore  .gitleaks.toml  .hadolint.yaml  .pre-commit-config.yaml  .prettierignore  .trivyignore  CLAUDE.md  Makefile  README.md  sonar-project.properties
apps/api/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 20260430_1903_init_users_refresh_tokens_audit_logs.py  20260430_2002_add_kyc_checks.py  20260430_2015_add_accreditation_checks.py  20260430_2033_add_bank_accounts.py  20260430_2100_add_investments.py  20260501_0700_add_accreditation_path.py
apps/api/app/: main.py
apps/api/app/api/: deps.py
apps/api/app/core/: config.py  envelope.py  errors.py  handlers.py  idempotency.py  logging.py  middleware.py  rate_limit.py  security.py
apps/api/app/db/: base.py  session.py  types.py
apps/api/app/models/: __init__.py  accreditation.py  audit_log.py  bank.py  investment.py  kyc.py  refresh_token.py  user.py
apps/api/app/repositories/: accreditation.py  audit_logs.py  bank.py  investments.py  kyc.py  refresh_tokens.py  users.py
apps/api/app/schemas/: accreditation.py  audit.py  auth.py  bank.py  investments.py  kyc.py  users.py
apps/api/app/services/: accreditation.py  auth.py  bank.py  investments.py  kyc.py  users.py
apps/api/app/workers/: __init__.py  worker.py
apps/api/scripts/: entrypoint.sh
apps/api/tests/: conftest.py
apps/api/tests/integration/: conftest.py  test_accreditation.py  test_accreditation_adapter.py  test_audit.py  test_auth.py  test_bank.py  test_handlers.py  test_investments.py  test_kyc.py  (+2 more)
(+189 files in other folders)
